--- a/vignettes/beginner_vicmap.Rmd
+++ b/vignettes/beginner_vicmap.Rmd
@@ -9,7 +9,8 @@ vignette: >
 ---
 
 <!--
-Copyright 2022 Province of Rachel Swain, Justin Cally
+Modifications Copyright 2020 Rachel Swain and Justin Cally
+Copyright 2019 Province of British Columbia
 
 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
@@ -37,6 +38,7 @@ knitr::opts_chunk$set(
 ```{r, include=FALSE, echo=FALSE, eval = all(VicmapR::check_geoserver(quiet = TRUE), !testthat:::on_cran(), sf::sf_extSoftVersion()[["GDAL"]] > 3)}
 # LIBRARIES -----
 library(VicmapR)
+library(dplyr)
 library(sf)
 ```
 
@@ -73,16 +75,18 @@ The functions in VicmapR therefore provide a much faster and more robust method 
 
 VicmapR uses *lazy evaluation*,  in which we query but do not collect the data from the Vicmap database. This is called making a 'Vicmap Promise'. A Vicmap Promise contains the dataset information but not the data itself. This promise can be filtered for a subset of the data before collecting. Using lazy evaluation we can collect the desired subset, instead of the entire dataset.
 
-## Worked Example - Swooping Birds
+## Worked Example - Melbourne's Tram Network
 
-<!-- Load swoops for reporting -->
+*Note: A previous version of this tutorial used swooping birds as the example, but due to the migration of platforms that data was not available at time of writing*
+
+<!-- Load trams for reporting -->
 ```{r, echo=FALSE, include=FALSE, warning=FALSE, message=FALSE,eval = all(VicmapR::check_geoserver(quiet = TRUE), !testthat:::on_cran(), sf::sf_extSoftVersion()[["GDAL"]] > 3)}
-swoops <- vicmap_query(layer = "datavic:FLORAFUANA1_SWOOPING_BIRD") %>% collect() 
+tram_route <- vicmap_query(layer = "open-data-platform:ptv_metro_tram_route") %>% collect() 
 ```
 
-To demonstrate VicmapR's features, we will download and explore a dataset from the Vicmap catalogue.
+To demonstrate VicmapR's features, we will download and explore a dataset from the Vicmap catalogue. The data is a spatial dataset of Melbourne's tram network.
 
-Australian spring is famous for the presence of swooping birds. Certain species of birds swoop during the breeding season to protect their nest from potential predators. Swooping birds in Victoria include the masked lapwing (plover), butcherbird, magpie-lark, noisy miner and perhaps most famously, the magpie. The Vicmap catalogue has a dataset of 'swoop' locations, recorded by members of the public. 
+<!-- Australian spring is famous for the presence of swooping birds. Certain species of birds swoop during the breeding season to protect their nest from potential predators. Swooping birds in Victoria include the masked lapwing (plover), butcherbird, magpie-lark, noisy miner and perhaps most famously, the magpie. The Vicmap catalogue has a dataset of 'swoop' locations, recorded by members of the public.  -->
 
 ### Searching for data 
 First, we need to search for the dataset. We can view all layers, or do a keyword search. Use `ignore.case = TRUE` for a case-insensitive search.
@@ -93,7 +97,7 @@ First, we need to search for the dataset. We can view all layers, or do a keywor
 all_layers <- listLayers() 
 
 #Case insensitive keyword search
-search <- listLayers(pattern = "swoop", ignore.case = T) 
+search <- listLayers(pattern = "tram", ignore.case = T) 
 
 ```
 
@@ -105,24 +109,33 @@ library(kableExtra)
 search %>% kable() #%>% kable_styling("bordered")
 ```
 
-Once we have the name of the Vicmap dataset we would like to download, in this case *'datavic:FLORAFUANA1_SWOOPING_BIRD'*, we can query the Vicmap database. 
+Once we have the name of the Vicmap dataset we would like to download, in this case *'open-data-platform:ptv_metro_tram_route'*, we can query the Vicmap database. 
 
 If we are still not sure from the name and description that this is the right dataset, we can look at the Vicmap Promise to get a snippet of the dataset contents. 
 
 ```{r, warning=FALSE, message=FALSE,eval = all(VicmapR::check_geoserver(quiet = TRUE), !testthat:::on_cran(), sf::sf_extSoftVersion()[["GDAL"]] > 3)}
-vicmap_query(layer = "datavic:FLORAFUANA1_SWOOPING_BIRD") 
+vicmap_query(layer = "open-data-platform:ptv_metro_tram_route") 
 ```
 
-We can see that the dataset contains, swoop date, location and species. At a glance this data should be adequate to start analysing the spatial distribution of bird swoops. 
+We can see that the dataset contains the route numbers and names. At a glance this data should be adequate. If you want more extensive information of the data you can use `get_metadata()` to download a list of (i) metadata about the data, (ii) a data dictionary (*work-in-progress*) and (iii) a link to the metadata url. 
+
+```{r, warning=FALSE, message=FALSE,eval = all(VicmapR::check_geoserver(quiet = TRUE), !testthat:::on_cran(), sf::sf_extSoftVersion()[["GDAL"]] > 3)}
+metadata <- vicmap_query(layer = "open-data-platform:ptv_metro_tram_route") %>%
+  get_metadata() %>%
+  .[[1]]
+
+kbl(metadata) %>%
+  kable_styling()
+```
 
 ### Downloading the data
 
-The summary also shows that there are `r try(nrow(swoops))` rows in this dataset. This isn't a very large dataset, but if we are using this data in an interactive report or application, waiting to download the full dataset may be impractical. 
+The summary also shows that there are `r try(nrow(tram_route))` rows in this dataset. This isn't a very large dataset, but if we are using this data in an interactive report or application, waiting to download the full dataset may be impractical. 
 
 Using lazy evaluation, we can use pipes to filter and subset the data, so that we only collect the desired subset. For example, let's just look at the first 10 rows.
 
 ```{r, warning=FALSE, message=FALSE,eval = all(VicmapR::check_geoserver(quiet = TRUE), !testthat:::on_cran(), sf::sf_extSoftVersion()[["GDAL"]] > 3)}
-query <- vicmap_query(layer = "datavic:FLORAFUANA1_SWOOPING_BIRD") %>% 
+query <- vicmap_query(layer = "open-data-platform:ptv_metro_tram_route") %>% 
   head(10) %>% collect()
 
 query
@@ -131,24 +144,22 @@ query
 
 ### Subsetting data
 
-Now let's only look at swoops that occurred in 2021, where STATUS is HISTORY2021. For our analysis, we will look only at the swoop date, species, number of birds, comments and geometry. Note that Vicmap datasets will retain id and OBJECTID columns even if not selected in the Vicmap promise. As this a simple features (sf) dataset, the geometry corresponding to the features (in this case, swoops) does not need to be selected as it is always attached. The geometry column can only be removed intentionally, for example, by using the `st_drop_geometry()` function in the `sf` package.
+Now let's only look at the tram route data. Note that VicmapR datasets will retain `id` and `geometry` columns even if not selected in the VicmapR promise. As this a simple features (sf) dataset, the geometry corresponding to the features does not need to be selected as it is always attached. The geometry column can only be removed intentionally, for example, by using the `st_drop_geometry()` function in the `sf` package.
 
 ```{r, warning=FALSE, message=FALSE,eval = all(VicmapR::check_geoserver(quiet = TRUE), !testthat:::on_cran(), sf::sf_extSoftVersion()[["GDAL"]] > 3)}
-library(dplyr)
-
-swoops_2021 <- vicmap_query(layer = "datavic:FLORAFUANA1_SWOOPING_BIRD") %>% 
-  filter(SWOOP_DATE > "2020-12-31z") %>% 
-  filter(STATUS == "HISTORY2021") %>% 
-  select(SWOOP_DATE, NO_OF_BIRDS, SPECIES, COMMENTS) %>%
+tram_select <- vicmap_query(layer = "open-data-platform:ptv_metro_tram_route") %>% 
+  filter(operator_name == "Yarra Trams") %>% 
+  filter(num_of_stops > 10) %>% 
+  select(route_id, route_short_name, trip_headsign, operator_name, route_km) %>%
   collect()
 
-swoops_2021 %>% head(5) %>% 
+tram_select %>% head(5) %>% 
   select(-id) %>% #condense table for viewing
   kable() %>% 
   kable_styling()
 ```
 
-**By filtering the Vicmap promise before collecting, we have downloaded only a subset of rows of data.**
+**By filtering the `Vicmap_promise` before collecting, we have downloaded only a subset of rows of data.**
 
 
 ### Quick visualisation of spatial data with the `mapview` package
@@ -157,98 +168,69 @@ Often the first thing we want to do is see the data on a map. The simplest and q
 
 ```{r, warning=FALSE, message=FALSE,eval = all(VicmapR::check_geoserver(quiet = TRUE), !testthat:::on_cran(), sf::sf_extSoftVersion()[["GDAL"]] > 3)}
 library(mapview)
-mapview(swoops_2021)
+mapviewOptions(fgb = FALSE)
+mapview(tram_route)
 ```
 
-While the output is basic, it is very simple to achieve and points can be clicked on to obtain the details from the other fields.
+While the output is basic, it is very simple to achieve and lines can be clicked on to obtain the details from the other fields.
 
 
 ### Visualisation with `leaflet`
 
-For more customisation, you might want to consider plotting your map in `leaflet`. Leaflet is JavaScript library that allows users to produce interactive maps that work efficiently across most desktop and mobile platforms. Using the leaflet package in R, we have the flexibility of plotting more complex map products.
+For more customization, you might want to consider plotting your map in `leaflet`. Leaflet is JavaScript library that allows users to produce interactive maps that work efficiently across most desktop and mobile platforms. Using the leaflet package in R, we have the flexibility of plotting more complex map products.
 
 We will start by plotting the most basic map in leaflet. Instead of using a single function like `mapview()`, in leaflet we need to add each component to the map. At a minimum we specify the leaflet object, add a basemap and add the markers. Note: differing to mapview, leaflet does not include marker labels by default, these must be added with the `popup` parameter.
 
 ```{r, warning=FALSE, message=FALSE,eval = all(VicmapR::check_geoserver(quiet = TRUE), !testthat:::on_cran(), sf::sf_extSoftVersion()[["GDAL"]] > 3)}
 library(leaflet)
 
-swoops_2021 %>%
-  leaflet() %>% #plot a leaflet object
-  addTiles() %>% #add a basemap (default is OpenStreetMap)
-  addMarkers(popup = swoops_2021$COMMENTS) #add geom points the marker label (automatically obtained from geom column)
-
-```
-
-There are a lot of points in this dataset and leaflet's default marker appears very large and crowded. `addCircleMarkers()` is a quick and easy way to customise markers to suit your data.
-
-```{r, warning=FALSE, message=FALSE,eval = all(VicmapR::check_geoserver(quiet = TRUE), !testthat:::on_cran(), sf::sf_extSoftVersion()[["GDAL"]] > 3)}
-swoops_2021 %>%
-  leaflet() %>%
-  addTiles() %>%
-  addCircleMarkers(
-    radius = 6,
-    color = "green",
-    stroke = FALSE, #removes outline
-    fillOpacity = 0.6,
-    popup = swoops_2021$COMMENTS
-  )
-```
-
-We can also easily conditionally format our markers and basemaps in leaflet. Let's:
-
-*  Change the size (radius) of the marker depending on the number of birds reported.
-*  Colour the marker depending on the species. Leaflet's `colorFactor()` function can be used to create the desired palette.
-*  Change the basemap to something more simple. There are many popular and free third-party base maps to choose from that can be added with `addProviderTiles()`.
-*  Add more details to the popup. Text in the popup parameter can be formatted with html tags.
-
-```{r, warning=FALSE, message=FALSE,eval = all(VicmapR::check_geoserver(quiet = TRUE), !testthat:::on_cran(), sf::sf_extSoftVersion()[["GDAL"]] > 3)}
-
 # Create a palette
-pal <- colorFactor("Accent", levels = swoops_2021$SPECIES) #define a colour palette
+pal <- colorFactor("Accent", levels = tram_route$trip_headsign) #define a colour palette
 
-swoops_2021 %>%
+tram_route %>%
   leaflet() %>%
   addProviderTiles(providers$CartoDB.Positron) %>% #add third party base map
-  addCircleMarkers(
-    radius = ~NO_OF_BIRDS,
-    color = ~pal(SPECIES),
-    stroke = FALSE,
-    fillOpacity = 0.7,
-    popup = paste0("<b>COMMENT: </b>", swoops_2021$COMMENTS, "<br>", #format the popup with html tags
-                   "<b>NUM. BIRDS: </b>", swoops_2021$NO_OF_BIRDS, "<br>",
-                   "<b>SPECIES: </b>", swoops_2021$SPECIES)
+  addPolylines(
+    color = ~pal(trip_headsign),
+    weight = 2,
+    stroke = 0.5, #removes outline
+    fillOpacity = 0.8,
+    popup = paste0("<b>Route No.: </b>", tram_route$route_short_name, "<br>", #format the popup with html tags
+                   "<b>Route Name: </b>", tram_route$trip_headsign, "<br>",
+                   "<b>Distance (km): </b>", tram_route$route_km)
   )
 ```
 
 ### Spatial filtering
 
-Let's say we want to know about the swoop spots only in our LGA (e.g. Darebin). We can apply a spatial filter to our dataset so that only the swoops in our suburb are shown. Where do we get the spatial data for our LGA? From the Vicmap catalogue of course!
+Let's say we want to know about the tram routes only in our LGA (e.g. Darebin). We can apply a spatial filter to our dataset so that only the tram routes in our suburb are shown. Where do we get the spatial data for our LGA? From the Vicmap catalogue of course!
 
 #### The sf package
 
-The `sf` package for R provides tools for dealing with 'simple feature' datasets, i.e. a data frame or tibble with a geometry list-column. The sf package allows us to manupulate spatial data and perform spatial operations. In this case, we want to find which points in our swoops data intersect with the polygon for our suburb polygon.
+The `sf` package for R provides tools for dealing with 'simple feature' datasets, i.e. a data frame or tibble with a geometry list-column. The sf package allows us to manupulate spatial data and perform spatial operations. In this case, we want to find which points in our tram route data intersect with the polygon for our suburb polygon.
 
 To do this we can use `sf::st_intersection()`. Before performing any spatial operations on a dataset, you want to make sure the coordinate reference system (crs) is correct and if there are multiple datasets, that the crs is the same for each dataset. You can check the crs system with `sf::st_crs()`.
 
 ```{r, warning=FALSE, message=FALSE,eval = all(VicmapR::check_geoserver(quiet = TRUE), !testthat:::on_cran(), sf::sf_extSoftVersion()[["GDAL"]] > 3)}
 # Suburb polygon for Darebin
-darebin <- vicmap_query(layer = "datavic:VMADMIN_LGA_POLYGON") %>%
-  select(LGA_NAME) %>% 
-  filter(LGA_NAME == "DAREBIN") %>%
-  collect()
+darebin <- vicmap_query(layer = "open-data-platform:lga_polygon") %>%
+  select(lga_name) %>% 
+  filter(lga_name == "DAREBIN") %>%
+  collect() %>%
+  st_make_valid() # magic fix for some spatial data
 
 # Check crs for each spatial dataset
-sf::st_crs(darebin) == sf::st_crs(swoops_2021)
+sf::st_crs(darebin) == sf::st_crs(tram_route)
 
 # Intersection
-darebin_swoops <- sf::st_intersection(swoops_2021, darebin)
-mapview(darebin_swoops) + mapview(darebin, alpha.regions = 0.3, col.regions= "green")
+darebin_trams <- sf::st_intersection(tram_route, darebin)
+mapview(darebin_trams) + mapview(darebin, alpha.regions = 0.3, col.regions= "green")
 
 ```
 
 #### Filtering within a radius 
 
-We probably regularly travel a bit further afield though, so lets look at a radius from our home address. We can create the radius geometry with st_buffer() but first need to define the coordinates for the centre of the radius (home). Don't forget to specify the crs as 4326 as we are dealing with a latitude and longitude coordinate system.
+We probably regularly travel a bit further afield though, so lets look at a radius from our home address. We can create the radius geometry with `st_buffer()` but first need to define the coordinates for the centre of the radius (home). Don't forget to specify the crs as 4326 as we are dealing with a latitude and longitude coordinate system.
 
 ```{r, warning=FALSE, message=FALSE,eval = all(VicmapR::check_geoserver(quiet = TRUE), !testthat:::on_cran(), sf::sf_extSoftVersion()[["GDAL"]] > 3)}
 lat <- -37.75215888969604
@@ -258,7 +240,7 @@ home <- st_sfc(st_point(c(lon, lat)), crs = 4326)
 
 ```
 
-We have a problem though, latitude and longitude units are degrees and st_buffer assumes units of meters. To convert from degrees to metres we need to project our latitude and longitude, which are represented as a point on a curved surface, onto a flat plane. To do this, we use a projection standard chosen specifically for the zone containing the coordinates. The standard is called the EPSG code and for our coordinates is zone 55.
+We have a problem though, latitude and longitude units are degrees and `st_buffer()` assumes units of meters. To convert from degrees to metres we need to project our latitude and longitude, which are represented as a point on a curved surface, onto a flat plane. To do this, we use a projection standard chosen specifically for the zone containing the coordinates. The standard is called the EPSG code and for our coordinates is zone 55.
 
 ```{r, warning=FALSE, message=FALSE,eval = all(VicmapR::check_geoserver(quiet = TRUE), !testthat:::on_cran(), sf::sf_extSoftVersion()[["GDAL"]] > 3)}
 # Project coordinates
@@ -270,7 +252,7 @@ home_radius <- sf::st_buffer(home_utm, dist = 10000)
 mapview(home_utm) + mapview(home_radius)
 ```
 
-Now we can use this radius to filter our swoops data. Don't forget, we need to convert the crs to 4283 to work with our swoops data
+Now we can use this radius to filter our tram route data. Don't forget, we need to convert the crs to 4283 to work with our tram route data
 
 ```{r, warning=FALSE, message=FALSE,eval = all(VicmapR::check_geoserver(quiet = TRUE), !testthat:::on_cran(), sf::sf_extSoftVersion()[["GDAL"]] > 3)}
 st_crs(home_radius) #crs is UTM Zone 55
@@ -278,13 +260,13 @@ st_crs(home_radius) #crs is UTM Zone 55
 home_radius <- st_transform(home_radius, crs = 4283)
 st_crs(home_radius)
 
-swoops_10k <- st_intersection(swoops_2021, home_radius)
-mapview(swoops_10k) + mapview(home_radius, alpha.regions = 0.3, col.regions = "green")
+tram_route_10k <- st_intersection(tram_route, home_radius)
+mapview(tram_route_10k) + mapview(home_radius, alpha.regions = 0.3, col.regions = "green")
 ```
 
 #### Finding nearby points
 
-Let's say we feel like a bike ride. We've picked a route but want to know which areas to avoid so as not to disturb too many nesting birds. This is a more difficult problem as the ride travels through several LGAs and we only really want to know about reported swoops that are very close to the route. 
+Let's say we feel like a bike ride. We've picked a route but want to know which areas to avoid so as not to get caught in tram tracks. 
 
 We can solve this problem in a similar way, using `st_intersection()`. 
 
@@ -295,13 +277,13 @@ route_line <- sf::st_read(system.file("shapes/cycle_route.geojson", package="Vic
   sf::st_transform(4283)
 
 #Add buffer to route - we need to convert to m to do this (same as before)
-route_m <- st_transform(route_line, "+proj=utm +zone=55") %>% st_buffer(300) #300m buffer
-swoops_m <- st_transform(swoops_2021, "+proj=utm +zone=55") # convert to same crs for st_intersection
+route_m <- st_transform(route_line, "+proj=utm +zone=55")
+tram_m <- st_transform(tram_route, "+proj=utm +zone=55") # convert to same crs for st_intersection
 
-swoops_en_route <- st_intersection(route_m,swoops_m)
+trams_en_route <- st_intersection(route_m,tram_m)
 
-# Recorded swoops within 300m of the route
-mapview(swoops_en_route) + mapview(route_line)
+# Recorded tram tracks within 300m of the route
+mapview(trams_en_route, col.regions = "Black") + mapview(route_line)
 
 ```
 
@@ -310,46 +292,21 @@ mapview(swoops_en_route) + mapview(route_line)
 
 The VicmapR package offers tools for geometric filtering that avoid the need for sf package. The WFS Geoserver on which Vicmap is based supports several geometric filters - see the full list [here](https://justincally.github.io/VicmapR/articles/query_vicmap.html#geometric-filters).
 
-These geometric filters allow us to perform basic spatial manipulation while retaining the benefits of lazy evaluation. So as before, if we want to filter our data before downloading, we can do so with more complex spatial operations. This is particularly useful when presenting Vicmap data in an interactive map, as it reduces the time for downloading data between re-rendering the map.
+These geometric filters allow us to perform basic spatial manipulation while retaining the benefits of lazy evaluation. So as before, if we want to filter our data before downloading, we can do so with more complex spatial operations. This is particularly useful when presenting VicmapR data in an interactive map, as it reduces the time for downloading data between re-rendering the map.
 
-Let's revisit our examples above. To get the swoops only in Darebin we can filter with `INTERSECTS()`.
+Let's revisit our examples above. To get the tram routes only in Darebin we can filter with `INTERSECTS()`.
 
 ```{r, message=FALSE,eval = all(VicmapR::check_geoserver(quiet = TRUE), !testthat:::on_cran(), sf::sf_extSoftVersion()[["GDAL"]] > 3)}
-# Suburb polygon for Darebin
-darebin <- vicmap_query(layer = "datavic:VMADMIN_LGA_POLYGON") %>%
-  select(LGA_NAME) %>% 
-  filter(LGA_NAME == "DAREBIN") %>%
-  collect()
-
-# Swoops in Darebin
-darebin_2021 <- vicmap_query(layer = "datavic:FLORAFUANA1_SWOOPING_BIRD") %>%
-  filter(SWOOP_DATE > "2020-12-31z") %>%
-  filter(STATUS == "HISTORY2021") %>%
+# trams in Darebin
+darebin_trams <- vicmap_query(layer = "open-data-platform:ptv_metro_tram_route") %>%
   filter(INTERSECTS(darebin)) %>%
-  select(SWOOP_DATE, NO_OF_BIRDS, SPECIES, COMMENTS) %>%
   collect()
 
-mapview(darebin_2021) + mapview(darebin, alpha.regions = 0.3, col.regions = "orange")
+mapview(darebin_trams) + mapview(darebin, alpha.regions = 0.3, col.regions = "orange")
 
 ```
 
-Now let's try the 10km radius.
-
-```{r,eval = all(VicmapR::check_geoserver(quiet = TRUE), !testthat:::on_cran(), sf::sf_extSoftVersion()[["GDAL"]] > 3)}
-
-# Swoops in 10k
-radius_2021 <- vicmap_query(layer = "datavic:FLORAFUANA1_SWOOPING_BIRD") %>%
-  filter(SWOOP_DATE > "2020-12-31z") %>%
-  filter(STATUS == "HISTORY2021") %>%
-  select(SWOOP_DATE, NO_OF_BIRDS, SPECIES, COMMENTS) %>%
-  filter(INTERSECTS(home_radius)) %>%
-  collect()
-
-mapview(radius_2021) + mapview(home_radius, alpha.regions = 0.3, col.regions = "orange")
-
-```
-
-And finally, the swoops on our cycling route. To find swoops within 300m we use the `INTERSECTS()` function and the cycling route with an added 300m buffer. Note: VicmapR geometric filters will be simplified, thus if precise intersections are desired, it is advised to do a cleanup of the filtered data once collected.
+And finally, the tram routes on our cycling route. To find tram tracks within 30m we use the `INTERSECTS()` function and the cycling route with an added 300m buffer. Note: VicmapR geometric filters will be simplified, thus if precise intersections are desired, it is advised to do a cleanup of the filtered data once collected.
 
 ```{r, warning=FALSE, message=FALSE,eval = all(VicmapR::check_geoserver(quiet = TRUE), !testthat:::on_cran(), sf::sf_extSoftVersion()[["GDAL"]] > 3)}
 
@@ -359,19 +316,17 @@ route_line <- sf::st_read(system.file("shapes/cycle_route.geojson", package="Vic
 # Condense line object
 route_poly <- route_line %>% 
   sf::st_transform(3111) %>% 
-  sf::st_buffer(300) %>% 
+  sf::st_buffer(30) %>% 
   sf::st_cast("POLYGON") %>% 
   sf::st_transform(4283)
 
-swoop <- VicmapR::vicmap_query("datavic:FLORAFUANA1_SWOOPING_BIRD") %>%
-  filter(SWOOP_DATE > "2020-12-31z") %>%
-  filter(STATUS == "HISTORY2021") %>%
-  select(SWOOP_DATE, NO_OF_BIRDS, SPECIES, COMMENTS) %>% 
-  filter(INTERSECTS(route_poly)) %>% collect()
+route_intersection <- vicmap_query(layer = "open-data-platform:ptv_metro_tram_route") %>%
+  filter(INTERSECTS(route_poly)) %>% 
+  collect() %>%
+  st_intersection(route_poly)
 
 
-mapview::mapview(route_poly) + mapview::mapview(swoop)
-
+mapview::mapview(route_poly) + mapview::mapview(route_intersection, color = "red", lwd = 5)
 
 ```
 
