--- a/README.Rmd
+++ b/README.Rmd
@@ -26,7 +26,13 @@ knitr::opts_chunk$set(
 [![R-CMD-check](https://github.com/JustinCally/VicmapR/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/JustinCally/VicmapR/actions/workflows/R-CMD-check.yaml)
 <!-- badges: end -->
 
-The goal of VicmapR is to provide functions to easily access Victorian Government spatial data through their WFS (Web Feature Service). VicmapR leverages code and a lazy querying approach developed by [Teucher et al. (2021)](https://joss.theoj.org/papers/10.21105/joss.02927) for the [{bcdata} R package](https://bcgov.github.io/bcdata/), which allows for a responsive and precise querying process.
+The goal of VicmapR is to provide functions to easily access Victorian Government spatial data through their WFS (Web Feature Service). VicmapR leverages code and a lazy querying approach developed by [Teucher et al. (2021)](https://joss.theoj.org/papers/10.21105/joss.02927) for the [{bcdata} R package](https://bcgov.github.io/bcdata/), which allows for a responsive and precise querying process. 
+
+## Migration of Victoria's Open Data Geoserver  
+
+**From March 2023 (`VicmapR v0.2.0`) the way `VicmapR` obtains data has changed**
+
+In March 2023 the data platform used by `VicmapR` will be migrated with the legacy platform discontinued. Changes have been to the `VicmapR` package to allow for the conversion and translation of of code in an effort to ensure legacy code still works. However, the migration may have unseen consequences and users are encouraged to review code. 
 
 ## Installation  
 
@@ -61,7 +67,7 @@ library(VicmapR)
 # Check to see if the geoserver is working. It will error if it is not working  
 check_geoserver()
 
-listLayers(pattern = "trees", ignore.case = T)
+listLayers(pattern = "road", ignore.case = T)
 ```
 
 ### Reading in data
@@ -73,13 +79,13 @@ As of VicmapR version `0.1.0` data is read in using a lazy evaluation method wit
 melbourne <- sf::st_read(system.file("shapes/melbourne.geojson", package="VicmapR"), quiet = T)
 
 # Obtain a promise of what data will be returned for a given layer
-vicmap_query(layer = "datavic:VMHYDRO_WATERCOURSE_DRAIN")
+vicmap_query(layer = "open-data-platform:hy_watercourse")
 
 # Build a more specific query and collect the results
-vicmap_query(layer = "datavic:VMHYDRO_WATERCOURSE_DRAIN") %>% # layer to query
-  filter(HIERARCHY == "L") %>% # simple filter for a column
+vicmap_query(layer = "open-data-platform:hy_watercourse") %>% # layer to query
+  filter(hierarchy == "L" & feature_type_code == 'watercourse_channel_drain') %>% # simple filter for a column
   filter(INTERSECTS(melbourne)) %>% # more advanced geometric filter
-  select(HIERARCHY, PFI) %>% 
+  select(hierarchy, pfi) %>% 
   collect()
 ```
 
