get abstract in listLayers() from api (#57)
* get abstract as well

* get rid of export for extract abstract

* add news

* update cql translate

* S3 method consistency (CRAN issue)

* md update

* update list features for missing metadata

* readme searches for watercourse

* update news

* update url

--- a/README.Rmd
+++ b/README.Rmd
@@ -67,7 +67,7 @@ library(VicmapR)
 # Check to see if the geoserver is working. It will error if it is not working  
 check_geoserver()
 
-listLayers(pattern = "road", ignore.case = T)
+listLayers(pattern = "watercourse", ignore.case = T)
 ```
 
 ### Reading in data
